--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,3 @@
----
-name: Neat Starter
-author: Surjith S M
-url: "https://surjithctly.in/"
+name: Monster in the city
+author: Frank
+url: https://www.implements.fun/
