--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,14 +1,13 @@
----
 links:
   - title: Netlify CMS
-    url: "https://www.netlifycms.org/"
+    url: https://www.implements.fun/
     desc: Open source content management for your Git workflow
   - title: Eleventy
-    url: "https://www.11ty.dev/"
+    url: https://www.implements.fun/
     desc: Eleventy is a simpler static site generator.
   - title: Alpine.js
-    url: "https://github.com/alpinejs/alpine"
+    url: https://www.implements.fun/
     desc: A minimal framework for composing JavaScript behavior in your markup.
   - title: Tailwind CSS
-    url: "https://tailwindcss.com/"
+    url: https://www.implements.fun/
     desc: A utility-first CSS framework for rapidly building custom designs.
